# Plum-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  qna.md  render.yaml  requirements.txt
app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
app/agents/: __init__.py  extraction_agent.py
app/api/: __init__.py  routes_claims.py  routes_health.py  routes_ui.py
app/graph/: __init__.py  builder.py  state.py
app/graph/nodes/: __init__.py  adjudicate.py  check_documents.py  classify.py  decide_claim.py  explain.py  extract.py  find_member.py  (+7 more)
app/llm/: __init__.py  client.py  prompts.py
app/models/: __init__.py  claim.py  decision.py  extraction.py  policy.py
app/policy/: __init__.py  policy_loader.py
app/rules/: __init__.py  bill_details.py  decision_rules.py  diagnosis_matcher.py  engine.py  financials.py  normalization.py
app/static/: index.html
app/verification/: __init__.py  document_checks.py  document_verifier.py
docs/: DEMO_SCRIPT.md  EVAL_REPORT.md  LIVE_REVIEW_SCRIPT.md  TECHNICAL_DOCUMENTATION.md  VISION_DEMO.md  architecture.md
docs/plans/: 2026-06-16-001-feat-extraction-self-correction-agent-plan.md
scripts/: make_sample_docs.py  run_eval.py  run_vision_demo.py
tests/: conftest.py  helpers.py  test_claim_models.py  test_claims_endpoint.py  test_config.py  test_diagnosis_matcher.py  test_document_checks.py  test_document_verifier.py  test_eval_all_cases.py  test_extraction_agent.py  test_health.py  test_llm_nodes.py  test_normalization.py  test_pipeline.py  test_policy_loader.py  test_rule_engine.py  test_rules.py
